--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -2,7 +2,7 @@
   padding: 30px 0 0;
   display: flex;
   flex-direction: column;
-  background-image: url(../../../images/lead.jpeg);
+  background-image: url(../../images/lead.jpeg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
