--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -2,10 +2,11 @@
   padding: 30px 0 0;
   display: flex;
   flex-direction: column;
+  align-items: center;
   background-image: url(../../images/lead.jpeg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 100%;
+  height: 90vh;
   width: 100%;
 }
