--- a/blocks/quote/__text/quote__text.css
+++ b/blocks/quote/__text/quote__text.css
@@ -1,10 +1,9 @@
-.lead__subtitle {
-  margin: 7px 0 0;
-  text-align: center;
+.quote__text {
+  margin: 0;
   color: black;
   font-weight: 400;
   line-height: 1.21;
   font-family: 'Inter';
   font-size: 16px;
-  max-width: 320px;
+  max-width: 100%;
 }
