--- a/pages/index.css
+++ b/pages/index.css
@@ -6,10 +6,14 @@
 
 @import url(../blocks/header/header.css);
 @import url(../blocks/lead/lead.css);
-@import url(../blocks/section/section.css);
-
 @import url(../blocks/lead/__title/lead__title.css);
 @import url(../blocks/lead/__subtitle/lead__subtitle.css);
+
+@import url(../blocks/about/about.css);
+@import url(../blocks/quote/quote.css);
+@import url(../blocks/quote/__strip/quote__strip.css);
+@import url(../blocks/quote/__text/quote__text.css);
+@import url(../blocks/quote/__title/quote__title.css);
 
 @import url(../blocks/content/content.css);
 
