--- a/blocks/quote/__title/quote__title.css
+++ b/blocks/quote/__title/quote__title.css
@@ -1,9 +1,12 @@
 .quote__title {
-  margin: 10px 0 10px;
+  margin: 30px 0 30px;
+  text-decoration: wavy;
+  text-transform: uppercase;
   color: #943E41;
   font-weight: 400;
   line-height: 1.21;
   font-family: 'Inter';
   font-size: 16px;
   max-width: 100%;
+  letter-spacing: 1px;
 }
