--- a/pages/index.css
+++ b/pages/index.css
@@ -15,6 +15,11 @@
 @import url(../blocks/quote/__text/quote__text.css);
 @import url(../blocks/quote/__title/quote__title.css);
 
+@import url(../blocks/table/table.css);
+@import url(../blocks/table/__cell/table__cell.css);
+@import url(../blocks/table/__title/table__title.css);
+@import url(../blocks/table/__text/table__text.css);
+
 @import url(../blocks/content/content.css);
 
 @import url(../blocks/footer/footer.css);
