--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -6,5 +6,6 @@
   line-height: 1.21;
   font-family: 'Inter';
   font-size: 16px;
-  max-width: 320px;
+  max-width: 100%;
+  letter-spacing: 1px;
 }
