--- a/blocks/table/__cell/table__cell.css
+++ b/blocks/table/__cell/table__cell.css
@@ -3,6 +3,7 @@
   text-align: center;
   border-bottom: 1px solid #943E41;
   background-color: black;
+  min-height: 100px;
 }
 
 .table__cell:last-of-type {
