--- a/blocks/about/about.css
+++ b/blocks/about/about.css
@@ -1,6 +1,5 @@
 .about {
-  padding: 80px 0 0;
-  min-height: 800px;
+  padding: 80px 0;
   background-color: white;
   display: flex;
   flex-direction: column;
