--- a/pages/index.css
+++ b/pages/index.css
@@ -9,6 +9,8 @@
 @import url(../blocks/lead/__title/lead__title.css);
 @import url(../blocks/lead/__subtitle/lead__subtitle.css);
 
+@import url(../blocks/content/content.css);
+
 @import url(../blocks/about/about.css);
 @import url(../blocks/quote/quote.css);
 @import url(../blocks/quote/__strip/quote__strip.css);
@@ -20,6 +22,16 @@
 @import url(../blocks/table/__title/table__title.css);
 @import url(../blocks/table/__text/table__text.css);
 
-@import url(../blocks/content/content.css);
+@import url(../blocks/time-table/time-table.css);
+@import url(../blocks/section-title/section-title.css);
+@import url(../blocks/section-subtitle/section-subtitle.css);
+@import url(../blocks/section-wrapper/section-wrapper.css);
+@import url(../blocks/section-line/section-line.css);
+@import url(../blocks/programms/programms.css);
+@import url(../blocks/programms/__programm/programms__programm.css);
+@import url(../blocks/programms/__time/programms__time.css);
+@import url(../blocks/programms/__title/programms__title.css);
+@import url(../blocks/programms/__text/programms__text.css);
+
 
 @import url(../blocks/footer/footer.css);
