--- a/pages/index.css
+++ b/pages/index.css
@@ -36,5 +36,11 @@
 @import url(../blocks/place/place.css);
 @import url(../blocks/place/__image/place__image.css);
 
+@import url(../blocks/dresscode/dresscode.css);
+@import url(../blocks/dresscode/__container/dresscode__container.css);
+@import url(../blocks/dresscode/__text-container/dresscode__text-container.css);
+@import url(../blocks/dresscode/__text/dresscode__text.css);
+
+
 
 @import url(../blocks/footer/footer.css);
