--- a/pages/index.css
+++ b/pages/index.css
@@ -46,6 +46,10 @@
 @import url(../blocks/colours/__colour/colours__colour.css);
 @import url(../blocks/colors/__caption/colors__caption.css);
 
+@import url(../blocks/gifts/gifts.css);
+@import url(../blocks/gifts/__container/gifts__container.css);
+@import url(../blocks/gifts/__text/gifts__text.css);
+
 
 
 @import url(../blocks/footer/footer.css);
