--- a/blocks/organizer/__title/organizer__title.css
+++ b/blocks/organizer/__title/organizer__title.css
@@ -1,5 +1,5 @@
-.programms__title {
-  margin: 7px 0;
+.organizer__title {
+  margin: 0;
   color: #943E41;
   font-weight: 400;
   line-height: 1.7;
