--- a/blocks/contacts/__text/contacts__text.css
+++ b/blocks/contacts/__text/contacts__text.css
@@ -1,11 +1,9 @@
-.programms__title {
-  margin: 7px 0;
-  color: #943E41;
+.contacts__text {
+  margin: 0;
+  color: black;
   font-weight: 400;
   line-height: 1.7;
   font-family: 'Inter';
   font-size: 16px;
-  max-width: 100%;
   letter-spacing: 0.5px;
-  text-transform: uppercase;
 }
