fix: Перенести карту

--- a/blocks/contacts/__link/contacts__link.css
+++ b/blocks/contacts/__link/contacts__link.css
@@ -9,4 +9,9 @@
   text-decoration: none;
   align-self: flex-start;
   display: flex;
+  transition: ease .6s;
+}
+
+.contacts__link:hover {
+  opacity: .5;
 }
