--- a/blocks/section-line/section-line.css
+++ b/blocks/section-line/section-line.css
@@ -1,10 +1,10 @@
 .section-line {
   margin: 10px 0 0;
   min-width: 10px;
+  max-height: 100%;
   background-image: url(../../images/line.svg);
   background-repeat: no-repeat;
   background-size: contain;
-  max-height: calc(100% - 300px);
 }
 
 @media screen and (max-width: 399px) {
