--- a/blocks/colors/__caption/colors__caption.css
+++ b/blocks/colors/__caption/colors__caption.css
@@ -1,10 +1,10 @@
 .colors__caption {
   margin: 40px 0 0;
+  max-width: 80%;
   color: black;
   font-weight: 400;
-  line-height: 1.7;
-  font-family: 'Inter';
+  font-family: 'Inter', Arial, Helvetica;
   font-size: 18px;
-  max-width: 80%;
   letter-spacing: 0.5px;
+  line-height: 1.7;
 }
