--- a/blocks/contacts/__link/contacts__link.css
+++ b/blocks/contacts/__link/contacts__link.css
@@ -1,14 +1,15 @@
 .contacts__link {
   margin: 0;
+  max-width: 100%;
   color: black;
   font-weight: 400;
-  line-height: 1.7;
-  font-family: 'Inter';
+  font-family: 'Inter', Arial, Helvetica;
   font-size: 16px;
   letter-spacing: 0.5px;
+  line-height: 1.7;
   text-decoration: none;
-  align-self: flex-start;
   display: flex;
+  align-self: flex-start;
   transition: ease .6s;
 }
 
