--- a/blocks/contacts/__text/contacts__text.css
+++ b/blocks/contacts/__text/contacts__text.css
@@ -1,9 +1,10 @@
 .contacts__text {
   margin: 0;
+  max-width: 100%;
   color: black;
   font-weight: 400;
-  line-height: 1.7;
-  font-family: 'Inter';
+  font-family: 'Inter', Arial, Helvetica;
   font-size: 16px;
   letter-spacing: 0.5px;
+  line-height: 1.7;
 }
