--- a/blocks/gifts/__container/gifts__container.css
+++ b/blocks/gifts/__container/gifts__container.css
@@ -1,8 +1,14 @@
 .gifts__container {
   padding: 40px 20px;
-  box-sizing: border-box;
-  background-color: white;
   min-height: 400px;
   width: 40%;
+  background-color: white;
+  box-sizing: border-box;
   border-radius: 15px;
+}
+
+@media screen and (max-width: 350px) {
+  .gifts__container {
+    padding: 30px 5px;
+  }
 }
