--- a/blocks/gifts/__text/gifts__text.css
+++ b/blocks/gifts/__text/gifts__text.css
@@ -1,10 +1,10 @@
 .gifts__text {
   margin: 15px 0 0;
+  max-width: 100%;
   color: black;
   font-weight: 400;
-  line-height: 1.7;
-  font-family: 'Inter';
+  font-family: 'Inter', Arial, Helvetica;
   font-size: 16px;
-  max-width: 100%;
   letter-spacing: 0.5px;
+  line-height: 1.7;
 }
