--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,11 +1,11 @@
 .lead__subtitle {
   margin: 7px 0 0;
+  max-width: 100%;
   text-align: center;
   color: black;
   font-weight: 400;
-  line-height: 1.21;
-  font-family: 'Inter';
+  font-family: 'Inter', Arial, Helvetica;
   font-size: 16px;
-  max-width: 100%;
   letter-spacing: 1px;
+  line-height: 1.21;
 }
