--- a/blocks/organizer/__subtitle/organizer__subtitle.css
+++ b/blocks/organizer/__subtitle/organizer__subtitle.css
@@ -1,10 +1,10 @@
 .organizer__subtitle {
   margin: 0;
+  max-width: 100%;
   color: black;
   font-weight: 400;
-  line-height: 1.7;
-  font-family: 'Inter';
+  font-family: 'Inter', Arial, Helvetica;
   font-size: 16px;
-  max-width: 100%;
+  line-height: 1.7;
   letter-spacing: 0.5px;
 }
