--- a/blocks/organizer/__title/organizer__title.css
+++ b/blocks/organizer/__title/organizer__title.css
@@ -1,11 +1,11 @@
 .organizer__title {
   margin: 0;
+  max-width: 100%;
   color: #943E41;
   font-weight: 400;
-  line-height: 1.7;
-  font-family: 'Inter';
+  font-family: 'Inter', Arial, Helvetica;
   font-size: 16px;
-  max-width: 100%;
   letter-spacing: 0.5px;
+  line-height: 1.7;
   text-transform: uppercase;
 }
