--- a/blocks/quote/__title/quote__title.css
+++ b/blocks/quote/__title/quote__title.css
@@ -1,11 +1,11 @@
 .quote__title {
   margin: 30px 0 30px;
-  text-transform: uppercase;
+  max-width: 100%;
   color: #943E41;
   font-weight: 400;
-  line-height: 1.21;
-  font-family: 'Inter';
+  font-family: 'Inter', Arial, Helvetica;
   font-size: 16px;
-  max-width: 100%;
+  text-transform: uppercase;
   letter-spacing: 1px;
+  line-height: 1.21;
 }
