--- a/blocks/section-subtitle/section-subtitle.css
+++ b/blocks/section-subtitle/section-subtitle.css
@@ -1,11 +1,11 @@
 .section-subtitle {
   margin: 10px 0 0;
+  max-width: 100%;
   text-align: center;
   color: black;
   font-weight: 400;
-  line-height: 1.21;
-  font-family: 'Inter';
+  font-family: 'Inter', Arial, Helvetica;
   font-size: 16px;
-  max-width: 100%;
+  line-height: 1.21;
   letter-spacing: 0.5px;
 }
