--- a/blocks/section-title/section-title.css
+++ b/blocks/section-title/section-title.css
@@ -1,11 +1,11 @@
 .section-title {
   margin: 0;
-  text-transform: uppercase;
+  max-width: 100%;
   color: #943E41;
   font-weight: 400;
-  line-height: 1.21;
-  font-family: 'Leo';
+  font-family: 'Leo', 'Inter', Arial, Helvetica;
   font-size: 22px;
-  max-width: 100%;
+  text-transform: uppercase;
   letter-spacing: 2.5px;
+  line-height: 1.21;
 }
