--- a/blocks/table/__text/table__text.css
+++ b/blocks/table/__text/table__text.css
@@ -1,9 +1,9 @@
 .table__text {
+  max-width: 100%;
   color: white;
   font-weight: 400;
-  line-height: 1.4;
-  font-family: 'Inter';
+  font-family: 'Inter', Arial, Helvetica;
   font-size: 14px;
-  max-width: 100%;
+  line-height: 1.4;
   letter-spacing: 1px;
 }
